[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-reqid"
version = "0.1.0"
description = "FastAPI middleware for request ID propagation with support for httpx, aiohttp, and requests"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Lareira Digital Development Team", email = "developers@lareira.digital"},
]
keywords = ["fastapi", "request-id", "middleware", "tracing", "correlation-id"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "starlette>=0.20.0",
]

[project.optional-dependencies]
httpx = ["httpx>=0.23.0"]
aiohttp = ["aiohttp>=3.8.0"]
requests = ["requests>=2.28.0"]
all = [
    "httpx>=0.23.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.23.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "fastapi>=0.100.0",
]

[project.urls]
Homepage = "https://github.com/lareira-digital/fastapi-reqid"
Repository = "https://github.com/lareira-digital/fastapi-reqid"
Issues = "https://github.com/lareira-digital/fastapi-reqid/issues"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_reqid"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".claude/",
    ".git/",
    ".gitignore",
    "dist/",
    "*.pyc",
    "__pycache__/",
]
